--- a/RogueLike/RogueLike.csproj
+++ b/RogueLike/RogueLike.csproj
@@ -8,11 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="bin\" />
+        <Folder Include="bin\" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="RogueLike.DataManagement.Random" Static="true" />
+        <Using Include="RogueLike.DataManagement.Random.Randomizer" Static="true" />
         <PackageReference Include="Lorem.NetCore" Version="1.0.0" />
     </ItemGroup>
     
